# armenian-ocr

./: .gitignore  .pre-commit-config.yaml  README.md  ocr.py  pyproject.toml  requirements.txt  setup.py
armenian_ocr/: __init__.py  ocr_wrapper.py  utils.py
armenian_ocr/detection/: layout_detection.py
armenian_ocr/detection/model/: craft.py  craft_utils.py  det_wrapper.py  image_utils.py
armenian_ocr/detection/model/basenet/: vgg16_bn.py
armenian_ocr/recognition/model/: model.py  rec_wrapper.py  utils.py
armenian_ocr/recognition/model/modules/: feature_extraction.py  prediction.py  transformation.py
test_images/: 1.json  2.json  3.json  4.json
